<resources>
    <string name="app_name">Wat U Mong</string>
    <string name="lorem_is_simply_dummy_text_of_the_printing_and_typesetting_industry_lorem_ipsum_has_been_the_industry_s_standard_dummy_text_ever_since_the_1500s_when_an_unknown_printer_took_a_galley_of_type_and_scrambled_it_to_make_a_type_specimen_book_it_has_survived_not_only_five_centuries_but_also_the_leap_into_electronic_typesetting_remaining_essentially_unchanged_it_was_popul">lorem is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popul</string>
    <string name="doi_suthep">Doi Suthep</string>
    <string name="wat_u_mong_general_information">Wat U Mong General Information</string>
    <string name="_12_sec">12 sec</string>
    <string name="score">Score:</string>
    <string name="_12">12</string>
    <string name="q1_dsfffffffjhjjffffewffefsfsf">Q1: Test</string>
    <string name="a">A</string>
    <string name="check_your_bank_activities">Check your bank activities</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="time">Time:</string>

    //information
    <string name="main_des">Wat Umong  is a 700-year-old Buddhist temple in Chiang Mai, Thailand. The temple was built in 1297 by King Manglai of the Lan Na dynasty. Of particular interest is a replica of the Ashok Pillar similar to the one at Vaishali with four lions and a wheel at the base and an additional larger wheel on top that acts as an umbrella for the lions. A similar pillar is also available at Sarnath Museum. The four lion head is adopted as the National Emblem of India.\n \n Reference: Wat Umong. (2017, November 02). Retrieved November 22, 2017, from https://en.wikipedia.org/wiki/Wat_Umong</string>
    <string name="second_des">The entire Wat Umong complex consists of 37.5 rai (15 acres) of wooded grounds. You can feed the fish, turtles, and ducks in a large pond. "Talking trees" have words of wisdom in Thai and English. The wat is famous for its ancient tunnels and large stupa. There are tunnels with Buddhist images below the chedi which can be easily explored. These tunnels were supposedly built by the King and painted with bush scenes so they could keep a famous but mentally deranged monk within the grounds of the monastery as he had a habit of just wandering off into the bush for days on end. Signs (proverbs) written in English and Thai hang from the trees on footpaths leading to the small lake where fish, pigeons, and turtles can be fed. Other attractions include a Buddha field of broken sculpture, a fasting Bodhisattva, a Spiritual Theatre of paintings similar to those at Suan Mokkh, reproductions of ancient Buddhist sculpture of India, and a library-museum. This last building offers many books on Buddhism and other philosophies as well as a collection of historic objects and Buddhist art.\n \n Wat Umong. (2017, November 02). Retrieved November 22, 2017, from https://en.wikipedia.org/wiki/Wat_Umong</string>
    <string name="third_des"> 1) It is the only place in Thailand we found tunnels building intentionally as a Buddhist holy place. \n 2) Mural paintings at Wat Umong are among of the oldest paintings in the country.\n 3) The paintings are in the form of Wall Paper.</string>
    <string name="fourth_des">The painting was found in tunnels 1,2,3</string>
    <string name="your_score" />
    <string name="qr_topic">Topic Here</string>
    <string name="qr_description">Description Here</string>
    <string name="the_history_of_wat_umong">The History of Wat Umong</string>
    <string name="what_is_unique_about_wat_umong">What is Unique </string>
    <string name="tunnel_in_wat_umong">Tunnel in Wat Umong</string>

</resources>
