<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/iphone6"
    android:orientation="vertical"
    >

    <include
        layout="@layout/app_bar"
        android:id="@+id/app_bar"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="70dp"
                android:textSize="30dp"
                android:text="@string/score"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="28dp"
                android:textSize="30dp"
                android:text="@string/_12"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="30dp"
            android:text="@string/q1_dsfffffffjhjjffffewffefsfsf"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="20dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnOne"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_margin="10dp"
            android:background="@android:color/holo_orange_dark">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="@string/a"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="30sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@color/lightGray" />

                <TextView
                    android:id="@+id/textQuestion1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/check_your_bank_activities"
                    android:textColor="@android:color/white" />


            </LinearLayout>
        </ImageButton>

        <ImageButton
            android:id="@+id/btnTwo"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_margin="10dp"
            android:background="@android:color/holo_orange_dark">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="@string/b"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="30sp" />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@color/lightGray" />

                <TextView
                    android:id="@+id/textQuestion2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/check_your_bank_activities"
                    android:textColor="@android:color/white" />


            </LinearLayout>
        </ImageButton>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal">


        <ImageButton
            android:id="@+id/btnThree"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_margin="10dp"
            android:background="@android:color/holo_orange_dark">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="@string/c"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="30sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@color/lightGray" />

                <TextView
                    android:id="@+id/textQuestion3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/check_your_bank_activities"
                    android:textColor="@android:color/white" />


            </LinearLayout>
        </ImageButton>

        <ImageButton
            android:id="@+id/btnFour"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_margin="10dp"
            android:background="@android:color/holo_orange_dark">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="D"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="30sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@color/lightGray" />

                <TextView
                    android:id="@+id/textQuestion4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/check_your_bank_activities"
                    android:textColor="@android:color/white" />


            </LinearLayout>
        </ImageButton>


    </LinearLayout>

</LinearLayout>
